[package]
name = "jsx"
authors = ["Adam Shirey <adam@shirey.ch>"]
version = "0.2.1"
edition = "2021"

description = "A command-line app for extracting JSON data from stdin."
readme = "README.md"
homepage = "https://github.com/aeshirey/jsx/"
repository = "https://github.com/aeshirey/jsx/"
license = "MIT OR Apache-2.0"
keywords = ["json", "cli"]
categories = ["filesystem"]

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
serde = "1.0"
serde_json = "1.0"

